# fex

./: Makefile  README.md  fex.cabal  session.vim
Development/: Fex.hs
Development/Fex/: Base.hs  Combinators.hs  Depend.hs  DependFlag.hs  Depends.hs  Experiment.hs  Flag.hs  IO.hs
Development/FexA/: Experiment.hs
Development/FexG/: Experiment.hs
Development/FexH/: Experiment.hs
Tests/: A.hs  FragLib.hs  PDB.hs  SCOP.hs  Untyped.hs  mattbench-fragbag  mattbench-fragbag.hs
tests/: A.hs
