name:                fex
version:             0.1.0.0
synopsis:            A framework for specifying and executing experiments.
-- description:         
homepage:            https://github.com/BurntSushi/fex
license:             PublicDomain
license-file:        UNLICENSE
author:              Andrew Gallant
maintainer:          jamslam@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall -Werror
               -fno-warn-name-shadowing
               -fno-warn-unused-do-bind
               -fno-warn-orphans
  exposed-modules:     Development.Fex
                       Development.Fex.Base
                       Development.Fex.Experiment
                       Development.Fex.Flag
                       Development.Fex.Depend
                       Development.Fex.DependFlag
  -- other-modules:       
  build-depends:       base == 4.6.*
                       , directory == 1.2.*
                       , filepath == 1.3.*
                       , transformers == 0.3.0.*
                       , containers == 0.5.*
